# omni-compiler

./: .gitignore  .gitmodules  COPYRIGHT  INSTALL.md  Makefile  Makefile.am  Makefile.in  README  README.md  RELEASE_NOTES  aclocal.m4  autogen.sh  configure  configure.ac  configure.in  revision  touchgen.sh
C-BackEnd/: .classpath  .project  Eclipse-Formatter.xml  Makefile.am  Makefile.in  ant.properties.in  build.xml
C-BackEnd/binding/: .classpath  .project  XcodeML_C.rng
C-BackEnd/copyright/: Relaxer-Artifact.txt
C-BackEnd/testdata/: LshiftExpr.c  LshiftExpr.xml  RshiftExpr.c  RshiftExpr.xml  XmSimpleDecompiler.bat  XmSimpleDecompiler.sh  anon_enum.xml  array.c  array.xml  asgBitAndExpr.c  asgBitAndExpr.xml  asgBitOrExpr.c  asgBitOrExpr.xml  asgBitXorExpr.c  asgBitXorExpr.xml  asgDivExpr.c  asgDivExpr.xml  asgLshiftExpr.c  asgLshiftExpr.xml  asgMinusExpr.c  asgMinusExpr.xml  asgModExpr.c  asgModExpr.xml  asgMulExpr.c  asgMulExpr.xml  asgPlusExpr.c  asgPlusExpr.xml  asgRshiftExpr.c  asgRshiftExpr.xml  assignExpr.c  assignExpr.xml  attribute.xml  bitAndExpr.c  bitAndExpr.xml  bitOrExpr.c  bitOrExpr.xml  bitXorExpr.c  bitXorExpr.xml  breakStatement.c  breakStatement.xml  (+92 more)
C-BackEnd/testsrc/: XmSimpleDecompiler.sh
C-FrontEnd/src/: Doxyfile  Makefile.am  Makefile.in  add_errnum.pl  c-acc-comp.c  c-acc-pragma.c  c-acc-xcodeml.c  c-acc.h  c-cmn.h  c-comp.c  c-comp.h  c-const.c  c-const.h  c-convert.c  c-dbgmain.c  c-dump.c  c-error.h  c-expr.c  c-expr.h  c-exprcode.def  c-exprcode.pl  c-gcctype.c  c-gcctype.h  c-lexer.l  c-lexyacc.h  c-main.c  c-omp-pragma.c  c-omp-xcodeml.c  c-omp.h  c-option.c  c-option.h  c-parser.y  c-pragma.c  c-pragma.h  c-ptree.c  c-ptree.h  c-reduce.c  c-token.c  c-token.h  c-token.pl  (+12 more)
Driver/src/: Doxyfile  Makefile.am  Makefile.in  om_opencl_conv_str.c  om_replace_pragma.c  omdriver.c  omdriver.h  xmp_collect_init.c  xmpf_collect_init.c
F-BackEnd/: .classpath  .project  Eclipse-Formatter.xml  Makefile.am  Makefile.in  ant.properties.in  build.xml  custom.css
F-BackEnd/binding/: .project  XcodeML_F.rng
F-BackEnd/testdata/: FcharacterConstant.xml  FcomplexConstant.xml  FintConstant.xml  FlogicalConstat.xml  FrealConstant.xml  all_syntax.xml  array.xml  array_F77.xml  array_constructor.xml  array_element.xml  array_ref.xml  character_ref.xml  check_ops.f90  check_ops.xml  common.xml  contains.xml  data.xml  do.xml  do_while.xml  entry.xml  equivalence.xml  format.xml  function.xml  goto.xml  if.xml  import_statement.xml  interface.xml  iso_c_binding.xml  module.xml  module_procedure.xml  namelist.xml  pointer.xml  pragma.xml  print.xml  read.xml  recursive.xml  return.xml  select_case.xml  select_type.xml  stop.xml  (+7 more)
F-FrontEnd/gnu_module/: Makefile  Makefile.am  Makefile.in  export_module.c  import_module.c  trans_module.c  xmalloc.c
F-FrontEnd/src/: C-ACC.h  C-OMP.h  C-XMP.h  C-expr-mem.c  C-expr.h  C-exprcode.awk  C-exprcode.c.awk  C-exprcode.def  C-exprcode.h.awk  ChangeLog  Doxyfile  F-ACC.c  F-OMN.c  F-OMP.c  F-XMP.c  F-compile-decl.c  F-compile-expr.c  F-compile-opt.c  F-compile.c  F-data.c  F-datasub.c  F-datatype.c  F-datatype.h  F-dump.c  F-equiv.c  F-front.h  F-ident.c  F-ident.h  F-input-xmod.c  F-input-xmod.h  F-input-xmod.h.in  F-intrinsic.c  F-intrinsics-table.c  F-intrinsics-types.h  F-io-xcodeml.c  F-mem.c  F-module-procedure.c  F-module-procedure.h  F-opt-expv.c  F-output-xcodeml.c  (+30 more)
XcodeML-Common/: .project  Makefile.am  Makefile.in  build.xml
XcodeML-Exc-Tools/: .classpath  .project  Makefile.am  Makefile.in  Xcode.def  build.xml  genXcodeJava.pl
libacc/src/: Makefile.am  Makefile.in  acc.c  acc_cl.c  acc_cuda.c  acc_cuda_util.c  acc_data.c  acc_gpu_data.c  acc_gpu_data.cu  acc_gpu_data_table.c  acc_gpu_mpool.cu  acc_gpu_pack.cu  acc_gpu_runtime.c  acc_gpu_runtime.cu  acc_gpu_stream.c  acc_gpu_stream.cu  acc_gpu_util.c  acc_gpu_util.cu  acc_kernel_cl.c  acc_memory_cl.c  acc_memory_cuda.c  acc_memory_gpu.c  acc_memory_map.c  acc_memory_table.c  acc_mpool_cl.c  acc_mpool_cuda.c  acc_queue_cl.c  acc_queue_cuda.c  acc_queue_map.c  acc_runtime.c  acc_util.c
libompc/src/: Doxyfile  Makefile.am  Makefile.in  asm_alpha.s  asm_sparc.s  ompc_barrier.c  ompc_lib.c  ompc_lock.c  ompc_main.c  ompc_reduction.h  ompc_runtime.c  ompc_sync.c  ompc_sync.h  ompc_task_scheduler.c  ompc_thread.c  ompclib.h  ompf_main.F90  ompf_runtime.c  ompf_thread.c  timer.c  timer.h
libompf/src/: Makefile.am  Makefile.in  omp_lib.f90  omp_lib_kinds.f90
libtlog/src/: Makefile.am  Makefile.in  tlog-time.c  tlog.h
libtlog/src_mpi/: Makefile.am  Makefile.in  tlog-mpi.h  tlog-time.c  tlog.c  tlog_conv.c  tlog_dump.c  tlog_event.c  tlog_event.h  tlog_misc.c  tlog_mpi.h
libtlog/src_threads/: Makefile.am  Makefile.in  tlog-ompc.c  tlog.c
libxacc/src/: Makefile  Makefile.am  Makefile.in  xacc.c  xacc_device_stack.c  xacc_pack.cu  xacc_reduce.c  xacc_reflect.c  xacc_reflect_mod.c  xacc_reflect_mod2.c  xacc_reflect_mod3.c  xacc_reflect_mod4.c  xacc_reflect_mod5.c
libxmp/src/: Makefile.am  Makefile.in  xacc.c  xacc_runtime.c  xacc_util_cl.c  xacc_util_cl_kernel.cl  xacc_util_cl_kernel.pzc  xacc_util_cuda.c  xmp.h  xmp_align.c  xmp_api_coarray.c  xmp_api_fmod.f90  xmp_api_global_view.c  xmp_api_global_view_f.c  xmp_api_util.c  xmp_array_section.c  xmp_array_section.h  xmp_async.c  xmp_atomic.c  xmp_barrier.c  xmp_bcast.c  xmp_bcast_acc.c  xmp_coarray.c  xmp_coarray_RMA.c  xmp_coarray_acc.c  xmp_coarray_bind.f90  xmp_coarray_bind_gen.pl  xmp_coarray_bind_scalar.f90  xmp_coarray_bind_scalar.pl  xmp_coarray_do.c  xmp_coarray_fjrdma.c  xmp_coarray_fjrdma_utils.c  xmp_coarray_gasnet.c  xmp_coarray_gasnet_utils.c  xmp_coarray_local.c  xmp_coarray_local_utils.c  xmp_coarray_mpi.c  xmp_coarray_set.c  xmp_coarray_tca.c  xmp_coarray_utils.c  (+91 more)
libxmp/src_gpu/: Makefile.am  Makefile.in  xmp_gpu_array_section.cu  xmp_gpu_data.cu  xmp_gpu_internal.h  xmp_gpu_lib.c  xmp_gpu_runtime.cu  xmp_gpu_schedule.cu  xmp_gpu_shadow.c  xmp_gpu_sync.cu  xmp_gpu_util.cu
libxmpf/include/: Makefile  Makefile.am  Makefile.in  xmp_coarray.h  xmp_coarray_alloc.h.sh  xmp_coarray_atomic.h  (+15 more)
(+6336 files in other folders)
